<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.serg.calc01.MainActivity"
    android:gravity="center"
    android:background="@color/material_grey_600">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:columnCount="@integer/columnCnt"
        android:rowCount="@integer/rowCnt"
        android:orientation="vertical"
        android:foregroundGravity="fill"
        android:layout_alignParentTop="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtResult"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:focusable="false"
            android:enabled="true"
            android:inputType="numberDecimal"
            android:textSize="@dimen/textSize"
            android:layout_gravity="top|left"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="right" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn7"
            android:id="@+id/btn7"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@string/btn7"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn8"
            android:id="@+id/btn8"
            android:layout_row="1"
            android:layout_column="1"
            android:height="80dp"
            android:width="80dp"
            android:contentDescription="@string/btn8"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:id="@+id/btn4"
            android:layout_row="2"
            android:layout_column="0"
            android:height="80dp"
            android:width="80dp"
            android:contentDescription="@string/btn4"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:id="@+id/btn1"
            android:layout_row="3"
            android:layout_column="0"
            android:height="80dp"
            android:width="80dp"
            android:contentDescription="@string/btn1"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:id="@+id/btn5"
            android:layout_row="2"
            android:layout_column="1"
            android:height="80dp"
            android:width="80dp"
            android:contentDescription="@string/btn5"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:id="@+id/btn2"
            android:layout_row="3"
            android:layout_column="1"
            android:height="80dp"
            android:width="80dp"
            android:contentDescription="@string/btn2"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn9"
            android:id="@+id/btn9"
            android:layout_row="1"
            android:layout_column="2"
            android:height="80dp"
            android:width="80dp"
            android:contentDescription="@string/btn9"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn6"
            android:id="@+id/btn6"
            android:layout_row="2"
            android:layout_column="2"
            android:height="80dp"
            android:width="80dp"
            android:contentDescription="@string/btn6"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:id="@+id/btb3"
            android:layout_row="3"
            android:layout_column="2"
            android:height="80dp"
            android:width="80dp"
            android:contentDescription="@string/btn3"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDiv"
            android:id="@+id/btnDivide"
            android:layout_row="1"
            android:layout_column="3"
            android:height="80dp"
            android:width="80dp"
            android:onClick="buttonOperationClick"
            android:textSize="@dimen/textSize"
            android:contentDescription="@string/btnDiv"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMul"
            android:id="@+id/btnMultiply"
            android:layout_row="2"
            android:layout_column="3"
            android:height="80dp"
            android:width="80dp"
            android:onClick="buttonOperationClick"
            android:textSize="@dimen/textSize"
            android:contentDescription="@string/btnMul"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMin"
            android:id="@+id/btnMinus"
            android:layout_row="3"
            android:layout_column="3"
            android:height="80dp"
            android:width="80dp"
            android:onClick="buttonOperationClick"
            android:textSize="@dimen/textSize"
            android:contentDescription="@string/btnMin"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnC"
            android:id="@+id/btnClear"
            android:layout_row="5"
            android:layout_column="0"
            android:width="160dp"
            android:height="80dp"
            android:layout_columnSpan="2"
            android:textSize="@dimen/textSize"
            android:onClick="buttonClearClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnComa"
            android:id="@+id/btnComa"
            android:layout_row="4"
            android:layout_column="0"
            android:width="80dp"
            android:height="80dp"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDel"
            android:id="@+id/btnDelete"
            android:layout_row="4"
            android:layout_column="2"
            android:width="80dp"
            android:height="80dp"
            android:textSize="@dimen/textSize"
            android:onClick="buttonClearClick"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn0"
            android:id="@+id/btn0"
            android:layout_row="4"
            android:layout_column="1"
            android:width="80dp"
            android:height="80dp"
            android:contentDescription="@string/btn0"
            android:onClick="buttonDigitClick"
            android:textSize="@dimen/textSize"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlus"
            android:id="@+id/btnPlus"
            android:layout_row="4"
            android:layout_column="3"
            android:width="80dp"
            android:height="80dp"
            android:onClick="buttonOperationClick"
            android:textSize="@dimen/textSize"
            android:contentDescription="@string/btnPlus"
            android:background="@drawable/btn_selector" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRes"
            android:id="@+id/btnResult"
            android:layout_row="5"
            android:layout_column="2"
            android:height="80dp"
            android:width="160dp"
            android:layout_columnSpan="2"
            android:onClick="buttonResultClick"
            android:textSize="@dimen/textSize" />


    </GridLayout>
</RelativeLayout>
